Resolve #17, set width of search-form to avoid overflow

--- a/app/assets/stylesheets/pages/courses.scss
+++ b/app/assets/stylesheets/pages/courses.scss
@@ -5,13 +5,17 @@
 /* Search form */
 .fixed-aside {
   position: fixed;
+  width: 25%;
+  @include breakpoint(laptop) {
+    width: 25%;
+  }
   @include breakpoint(tablet) {
     position: relative;
+    width: 100%;
   }
 }
 
 .search-form {
-  width: 45%;
   margin-top: 30px;
   .jumbotron {
     overflow-y: auto;
@@ -35,11 +39,7 @@
   .search-buttons {
     margin: 30px 0;
   }
-  @include breakpoint(laptop) {
-    width: 37%;
-  }
   @include breakpoint(tablet) {
-    width: 100%;
     margin-top: 0px;
   }
 }
